--- a/main.html
+++ b/main.html
@@ -27,6 +27,37 @@
     <div id="main-logo">
       <img alt="Stay and Play at Home with Popular Past Google Doodles: Garden Gnomes (2018)" height="220" src="images/stay-and-play-at-home-with-popular-past-google-doodles-garden-gnomes-2018-6753651837108770.2-law.gif" style="padding-top:0px" title="Stay and Play at Home with Popular Past Google Doodles: Garden Gnomes (2018)" width="550">
     </div>
+
+    <div class="container">
+      <div id="magnify">
+
+      </div>
+      <div id="main-searchbar">
+        <input  id="searchbar" maxlength="2048" name="q" type="text" aria-autocomplete="both" aria-haspopup="false" autocapitalize="off" autocomplete="off" autocorrect="off" autofocus="" role="combobox" spellcheck="false" title="Search" value="" aria-label="Search">
+      </div>
+    </div> 
+
+    <div class="buttons">
+        <input type="submit" name="gsearch" value="Google Search" />
+        <input type="submit" name="gsearch2" value="I'm Feeling Lucky" />
+    </div>
+
+    
+
+    <div class="footer">
+      <div id="footer-left">
+        <p>Advertising</p>
+        <p>Business</p>
+        <p>How Search Works</p>
+      </div>
+      <div id="footer-right">
+        <p>Privacy</p>
+        <p>Terms</p>
+        <p>Settings</p>
+      </div>
+    </div>
+
+
   </div>
 
 
